--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest package="com.softproject.kartikrahulrajatraman.secatetest"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+        <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity">
+        </activity>
+        <activity android:name=".ScannerActivity">
         </activity>
     </application>
 
